# focus-reactor

./: Cargo.toml
assets/: AppIcon.icns
src/: macos_status_bar.rs  main.rs
