[package]
name = "focus_reactor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
anyhow = "1.0"
time = { version = "0.3", features = ["macros", "formatting"] }
tray-icon = "0.19"
muda = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSAttributedString", "NSDictionary", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSStatusItem", "NSStatusBar", "NSStatusBarButton", "NSFont", "NSButton", "NSControl", "NSMenu"] }
